--- a/index.html
+++ b/index.html
@@ -9,41 +9,41 @@
         :root { --blue: #3498db; --green: #2ecc71; --red: #e74c3c; --orange: #f39c12; --dark: #2c3e50; }
         body { font-family: 'Segoe UI', sans-serif; margin: 0; background: #f8f9fa; display: flex; flex-direction: column; height: 100vh; }
         
-        /* القائمة الجانبية - لابتوب */
-        .sidebar { background: var(--dark); width: 250px; transition: 0.3s; display: flex; flex-direction: column; color: white; position: fixed; right: 0; height: 100vh; z-index: 1000; }
+        /* Sidebar Desktop */
+        .sidebar { background: var(--dark); width: 250px; transition: 0.3s; display: flex; flex-direction: column; color: white; position: fixed; right: 0; height: 100vh; z-index: 1000; border-left: 1px solid #3e4f5f; }
         .sidebar.collapsed { width: 70px; }
-        .menu-btn { padding: 20px; cursor: pointer; text-align: center; color: var(--blue); font-size: 1.5rem; border-bottom: 1px solid #3e4f5f; }
+        .menu-btn { padding: 25px; cursor: pointer; text-align: center; color: var(--blue); font-size: 1.8rem; border-bottom: 1px solid #3e4f5f; margin-bottom: 10px; }
         .nav-item { padding: 15px 20px; display: flex; align-items: center; color: #bdc3c7; cursor: pointer; text-decoration: none; white-space: nowrap; overflow: hidden; }
         .nav-item:hover { background: #34495e; color: white; }
-        .nav-item i { min-width: 35px; font-size: 1.2rem; }
+        .nav-item i { min-width: 40px; font-size: 1.3rem; text-align: center; }
         .collapsed .nav-item span { display: none; }
 
-        /* المحتوى الرئيسي */
+        /* Main Content */
         main { margin-right: 250px; padding: 20px; transition: 0.3s; flex: 1; padding-bottom: 80px; }
         .sidebar.collapsed + main { margin-right: 70px; }
 
-        /* كروت الإحصائيات (مثل الصورة) */
+        /* Stats Cards */
         .stats-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 15px; margin-bottom: 25px; }
-        .stat-card { padding: 20px; border-radius: 12px; color: white; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.1); position: relative; }
-        .stat-card .label { font-size: 1.1rem; font-weight: 500; margin-bottom: 10px; display: block; }
+        .stat-card { padding: 20px; border-radius: 12px; color: white; text-align: center; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        .stat-card .label { font-size: 1.1rem; margin-bottom: 8px; display: block; opacity: 0.9; }
         .stat-card .value { font-size: 1.8rem; font-weight: bold; }
 
-        /* دليل المشتركين */
+        /* Table Card */
         .data-card { background: white; padding: 20px; border-radius: 15px; box-shadow: 0 2px 10px rgba(0,0,0,0.05); }
-        .table-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; border-bottom: 2px solid #f8f9fa; padding-bottom: 10px; flex-wrap: wrap; gap: 10px; }
+        .table-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 15px; flex-wrap: wrap; gap: 10px; }
         .search-box { position: relative; width: 100%; max-width: 300px; }
-        .search-box input { width: 100%; padding: 8px 35px 8px 10px; border: 1px solid #ddd; border-radius: 8px; outline: none; }
-        .search-box i { position: absolute; right: 10px; top: 10px; color: #999; }
+        .search-box input { width: 100%; padding: 10px 35px 10px 10px; border: 1px solid #ddd; border-radius: 8px; outline: none; }
+        .search-box i { position: absolute; right: 10px; top: 12px; color: #999; }
 
         table { width: 100%; border-collapse: collapse; }
-        th { color: #888; padding: 12px; border-bottom: 2px solid #f8f9fa; }
-        td { padding: 12px; text-align: center; border-bottom: 1px solid #f1f1f1; }
-        .badge-red { background: #fdedec; color: #e74c3c; padding: 4px 10px; border-radius: 20px; font-size: 0.85rem; font-weight: bold; }
+        th, td { padding: 12px; border-bottom: 1px solid #f1f1f1; text-align: center; }
+        th { color: #888; font-weight: 500; }
+        .badge-red { color: #e74c3c; font-weight: bold; }
 
-        /* القائمة السفلية - جوال */
-        .bottom-nav { position: fixed; bottom: 0; width: 100%; background: white; display: none; justify-content: space-around; padding: 10px 0; box-shadow: 0 -2px 10px rgba(0,0,0,0.1); z-index: 1000; }
-        .bottom-item { display: flex; flex-direction: column; align-items: center; color: #7f8c8d; font-size: 0.75rem; cursor: pointer; }
-        .bottom-item i { font-size: 1.4rem; margin-bottom: 3px; }
+        /* Bottom Nav Mobile */
+        .bottom-nav { position: fixed; bottom: 0; width: 100%; background: white; display: none; justify-content: space-around; padding: 12px 0; box-shadow: 0 -2px 10px rgba(0,0,0,0.1); z-index: 1000; }
+        .bottom-item { display: flex; flex-direction: column; align-items: center; color: #7f8c8d; font-size: 0.8rem; cursor: pointer; }
+        .bottom-item i { font-size: 1.5rem; margin-bottom: 4px; }
 
         @media (max-width: 768px) {
             .sidebar { display: none; }
@@ -57,7 +57,7 @@
     <nav class="sidebar" id="sidebar">
         <div class="menu-btn" onclick="toggleSidebar()"><i class="fas fa-bars"></i></div>
         <div class="nav-item" onclick="loadDashboard()"><i class="fas fa-home"></i><span>الرئيسية</span></div>
-        <div class="nav-item" onclick="showUsersReport()"><i class="fas fa-tasks"></i><span>العمليات</span></div>
+        <div class="nav-item" onclick="showUsersReport()"><i class="fas fa-file-invoice"></i><span>العمليات</span></div>
         <div class="nav-item" onclick="loadExpenses()"><i class="fas fa-wallet"></i><span>المصروفات</span></div>
     </nav>
 
@@ -65,60 +65,79 @@
         </main>
 
     <nav class="bottom-nav">
-        <div class="bottom-item" onclick="loadDashboard()"><i class="fas fa-home"></i>الرئيسية</div>
-        <div class="bottom-item" onclick="showUsersReport()"><i class="fas fa-exchange-alt"></i>العمليات</div>
-        <div class="bottom-item" onclick="loadExpenses()"><i class="fas fa-wallet"></i>المصاريف</div>
+        <div class="bottom-item" onclick="loadDashboard()"><i class="fas fa-home"></i><span>الرئيسية</span></div>
+        <div class="bottom-item" onclick="showUsersReport()"><i class="fas fa-exchange-alt"></i><span>العمليات</span></div>
+        <div class="bottom-item" onclick="loadExpenses()"><i class="fas fa-wallet"></i><span>المصاريف</span></div>
     </nav>
 
     <script>
+        // وظيفة إخفاء/إظهار الشريط الجانبي
         function toggleSidebar() { document.getElementById('sidebar').classList.toggle('collapsed'); }
 
+        // --- تحميل الرئيسية (نفس محتوى صورتك) ---
         function loadDashboard() {
             fetch('/dashboard/').then(r => r.json()).then(stats => {
                 fetch('/customers/').then(r => r.json()).then(customers => {
-                    renderUI(stats, customers);
+                    let html = `
+                        <h2 style="color:var(--blue); text-align:center;">نظرة عامة</h2>
+                        <div class="stats-grid">
+                            <div class="stat-card" style="background:var(--blue)"><span class="label">الرصيد</span><div class="value">${stats.balance}</div></div>
+                            <div class="stat-card" style="background:var(--green)"><span class="label">المقبوضات</span><div class="value">${stats.income}</div></div>
+                            <div class="stat-card" style="background:var(--red)"><span class="label">المصروفات</span><div class="value">${stats.expenses}</div></div>
+                            <div class="stat-card" style="background:var(--orange)"><span class="label">الديون</span><div class="value">${stats.debts}</div></div>
+                        </div>
+                        <div class="data-card">
+                            <div class="table-header">
+                                <div style="font-weight:bold;"><i class="fas fa-list"></i> دليل المشتركين</div>
+                                <div class="search-box"><i class="fas fa-search"></i><input type="text" placeholder="بحث..." onkeyup="searchTable(this.value)"></div>
+                            </div>
+                            <table id="mainTable">
+                                <thead><tr><th>م</th><th>الاسم</th><th>الهاتف</th><th>الرصيد الحالي</th></tr></thead>
+                                <tbody>`;
+                    customers.forEach((c, i) => {
+                        html += `<tr><td>${i+1}</td><td>${c.full_name}</td><td>${c.phone}</td><td class="${c.wallet_balance < 0 ? 'badge-red' : ''}">${c.wallet_balance}</td></tr>`;
+                    });
+                    html += `</tbody></table></div>`;
+                    document.getElementById('content').innerHTML = html;
                 });
             });
         }
 
-        function renderUI(stats, customers) {
-            let html = `
-                <h2 style="color:var(--blue); text-align:center;">نظرة عامة</h2>
-                <div class="stats-grid">
-                    <div class="stat-card" style="background:var(--blue)"><span class="label">الرصيد</span><div class="value">ريال ${stats.balance}</div></div>
-                    <div class="stat-card" style="background:var(--green)"><span class="label">المقبوضات</span><div class="value">ريال ${stats.income}</div></div>
-                    <div class="stat-card" style="background:var(--red)"><span class="label">المصروفات</span><div class="value">ريال ${stats.expenses}</div></div>
-                    <div class="stat-card" style="background:var(--orange)"><span class="label">الديون</span><div class="value">ريال ${stats.debts}</div></div>
-                </div>
-                <div class="data-card">
-                    <div class="table-header">
-                        <div style="font-weight:bold;"><i class="fas fa-list"></i> دليل المشتركين</div>
-                        <div class="search-box">
-                            <i class="fas fa-search"></i>
-                            <input type="text" placeholder="بحث باسم المشترك..." onkeyup="searchTable(this.value)">
-                        </div>
-                    </div>
-                    <table id="custTable">
-                        <thead><tr><th>م</th><th>الاسم</th><th>الهاتف</th><th>الرصيد الحالي</th></tr></thead>
-                        <tbody>`;
-            customers.forEach((c, i) => {
-                html += `<tr>
-                    <td>${i+1}</td>
-                    <td>${c.full_name}</td>
-                    <td>${c.phone}</td>
-                    <td><span class="${c.wallet_balance < 0 ? 'badge-red' : ''}">${c.wallet_balance}</span></td>
-                </tr>`;
+        // --- تحميل تقرير العمليات (إضافة القراءات) ---
+        function showUsersReport() {
+            fetch('/users_report/').then(r => r.json()).then(data => {
+                let html = `<h2>📊 تقرير العمليات والقراءات</h2><div class="data-card"><table>
+                    <thead><tr><th>المشترك</th><th>العداد</th><th>السابقة</th><th>الحالية</th><th>آخر مبلغ</th><th>إجراء</th></tr></thead><tbody>`;
+                data.forEach(u => {
+                    html += `<tr><td>${u.full_name}</td><td>${u.serial_number}</td><td>${u.prev_r}</td><td>${u.curr_r}</td><td>${u.last_amount}</td>
+                    <td><button onclick="addReading(${u.meter_id})" style="background:var(--green); color:white; border:none; padding:5px 10px; border-radius:5px; cursor:pointer">قراءة</button></td></tr>`;
+                });
+                html += `</tbody></table></div>`;
+                document.getElementById('content').innerHTML = html;
             });
-            html += `</tbody></table></div>`;
-            document.getElementById('content').innerHTML = html;
         }
 
+        // --- وظيفة إضافة قراءة ---
+        function addReading(meterId) {
+            const val = prompt("أدخل القراءة الحالية:");
+            if(!val) return;
+            fetch('/readings/', {
+                method: 'POST',
+                headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({meter_id: meterId, current_reading: parseInt(val)})
+            }).then(res => res.json()).then(d => { alert(d.message || d.detail); showUsersReport(); });
+        }
+
+        // --- تحميل المصروفات (بشكل مبسط) ---
+        function loadExpenses() {
+            document.getElementById('content').innerHTML = `<h2>💸 المصروفات</h2><div class="data-card"><p>سيتم عرض قائمة المصروفات هنا...</p></div>`;
+        }
+
+        // وظيفة البحث
         function searchTable(val) {
             let filter = val.toLowerCase();
-            let rows = document.querySelectorAll("#custTable tbody tr");
-            rows.forEach(r => {
-                r.style.display = r.innerText.toLowerCase().includes(filter) ? "" : "none";
-            });
+            let rows = document.querySelectorAll("#mainTable tbody tr");
+            rows.forEach(r => r.style.display = r.innerText.toLowerCase().includes(filter) ? "" : "none");
         }
 
         window.onload = loadDashboard;
